[package]
name = "pinepass"
version = "0.1.0"
edition = "2021"
authors=["Abimalek Mekuriya"]
description = "PinePass enables you to upload data from a directory into pinecone"

[dependencies]
openai-api-rs = "0.1.8"
indicatif="0.17.5"
clap = { version = "3", features = ["derive"] }
pinenut = "0.1.2"
walkdir = "2"
tokio = { version = "1.28.2", features = ["full"]}
serde_json = {version="1.0", features = ["preserve_order"]}
klask = "1.0.0"
awaitgroup = "0.6.0"

[package.metadata.bundle]
name = "PinePass"
identifier = "com.pinepass.opennote"
version = "1.0.0"
category = "utilities"
short_description = "PinePass enables you to upload data from a directory into pinecone"


[dependencies.uuid]
version = "1.3.4"
features = [
  "v4",
  "fast-rng"
]
